root/static/scss/table.scss
.table {
    table-layout: fixed;

    thead > tr > th {
        vertical-align: none;
        border: none;
        font-weight: bold;
    }

    tbody > tr > td {
        border-top: none;
    }

    td {
        border-top-width: 0px;
    }

    td.abstract {
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
    }

    th.date,
    th.number,
    td.date,
    td.number {
        text-align: right;
        white-space: nowrap;
    }

    th.date,
    th.number {
        width: 8em;
        direction: rtl; // overflow left, not right
    }

    td.name,
    th.name {
        width: 21em;
        font-weight: bold;
    }

    th.position {
        width: 10px;
    }

    th.river-gauge,
    td.river-gauge {
        width: 36px;
    }
}

